--- a/EasyConsole/MainMenu.xaml
+++ b/EasyConsole/MainMenu.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:EasyConsole"
         mc:Ignorable="d"
-        Title="EasySave" Height="500" Width="900" ResizeMode="NoResize">
+        Title="EasySave" Height="500" Width="900" ResizeMode="NoResize" Loaded="Display_Save_Loaded">
     <StackPanel>
         <ListView x:Name="ListView" Height="400" Margin="10,10,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="880">
             <ListView.View>
