--- a/CryptoSoft/MainWindow.xaml
+++ b/CryptoSoft/MainWindow.xaml
@@ -5,8 +5,18 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CryptoSoft"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        
+        Title="CryptoSoft" Height="233.394" Width="711.667" ResizeMode="NoResize">
+    <Grid Margin="0,0,-6,-29" HorizontalAlignment="Right" Width="712">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="131*"/>
+            <RowDefinition Height="102*"/>
+        </Grid.RowDefinitions>
+        <TextBlock HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap" Text="CryptoSoft" VerticalAlignment="Top" FontSize="36"/>
+        <TextBox HorizontalAlignment="Left" Height="23" Margin="226,98,0,0" TextWrapping="Wrap" Text="Files" TextAlignment="Center" VerticalAlignment="Top" Width="183" Background="#FFD6D1D1"/>
+        <Button Content="Crypt" HorizontalAlignment="Left" Margin="65,10,0,0" VerticalAlignment="Top" Width="75" Grid.Row="1"/>
+        <Button Content="Done" HorizontalAlignment="Left" Margin="534,10,0,0" VerticalAlignment="Top" Width="75" Grid.Row="1"/>
     </Grid>
+
+
+
 </Window>
