--- a/EasyConsole/TitleScreen.xaml
+++ b/EasyConsole/TitleScreen.xaml
@@ -18,21 +18,21 @@
                 </TransformGroup>
             </Label.RenderTransform>
         </Label>
-        <Image Source="C:\Users\Alyssa\Desktop\Image_easysave\easysave.png" Height="189" Width="268"/>
+        <Image Source="..\Ressources\easysave.png" Height="189" Width="400"/>
         <StackPanel x:Name="chooseLanguage" Margin="10" Height="88">
             <Label x:Name="language" Content="Choose your language :" Foreground="White" FontFamily="Arial" FontSize="14"/>
             <WrapPanel Width="639">
                 <Button x:Name="english" Width="150" Background="Black" BorderBrush="Black">
-                    <Image Source="C:\Users\Alyssa\Desktop\Image_easysave\english.png" Height="50" Width="50"/>
+                    <Image Source="..\Ressources\english.png" Height="50" Width="50"/>
                 </Button>
                 <Button x:Name="spainish" Width="150" Background="Black" BorderBrush="Black">
-                    <Image Source="C:\Users\Alyssa\Desktop\Image_easysave\spainish.png" Height="50" Width="50"/>
+                    <Image Source="..\Ressources\spainish.png" Height="50" Width="50"/>
                 </Button>
                 <Button x:Name="french" Width="150" Background="Black" BorderBrush="Black" >
-                    <Image Source="C:\Users\Alyssa\Desktop\Image_easysave\french.png" Height="50" Width="50"/>
+                    <Image Source="..\Ressources\french.png" Height="50" Width="50"/>
                 </Button>
                 <Button x:Name="german" Width="150" Background="Black" BorderBrush="Black"  >
-                    <Image Source="C:\Users\Alyssa\Desktop\Image_easysave\german.png" Height="50" Width="50"/>
+                    <Image Source="..\Ressources\german.png" Height="50" Width="50"/>
                 </Button>
             </WrapPanel>
         </StackPanel>
