--- a/EasyConsole/ModifySave.xaml
+++ b/EasyConsole/ModifySave.xaml
@@ -3,10 +3,19 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:EasyConsole"
+        xmlns:local="clr-namespace:EasySave.Model"
         xmlns:Model="clr-namespace:EasySave.Model" x:Class="EasyConsole.ModifySave"
+        xmlns:System="clr-namespace:System;assembly=mscorlib"
         mc:Ignorable="d"
         Title="ModifySave" Height="335.901" Width="493.957">
+    <Window.Resources>
+        <ObjectDataProvider x:Key="enmPositions" MethodName="GetValues" ObjectType="{x:Type System:Enum}">
+        <ObjectDataProvider.MethodParameters>
+                <x:Type TypeName="local:BackupType"></x:Type>
+        </ObjectDataProvider.MethodParameters>
+        </ObjectDataProvider>
+    </Window.Resources>
+    
     <Grid>
         <TextBlock HorizontalAlignment="Left" Margin="0,10,0,0" TextWrapping="Wrap" Text="Modify your element" VerticalAlignment="Top" Width="487" FontSize="24" FontWeight="Bold" TextAlignment="Center"/>
         <TextBlock HorizontalAlignment="Left" Margin="192,56,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="21" FontSize="18"><Run Text="BackUpName"/><LineBreak/><Run/></TextBlock>
@@ -17,7 +26,7 @@
         <TextBox x:Name="Source" HorizontalAlignment="Left" Height="23" Margin="14,130,0,0" TextWrapping="Wrap" Text="{Binding Source}" VerticalAlignment="Top" Width="453"/>
         <TextBox x:Name="Target" HorizontalAlignment="Left" Height="23" Margin="14,179,0,0" TextWrapping="Wrap" Text="{Binding Target}" VerticalAlignment="Top" Width="453" RenderTransformOrigin="0.559,1.388"/>
         <Button Content="Modify" HorizontalAlignment="Left" Margin="205,272,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
-        <ComboBox x:Name="MenuSaveType" Text="" HorizontalAlignment="Left" Margin="179,240,0,0" VerticalAlignment="Top" Width="120"/>
+        <ComboBox x:Name="MenuSaveType" Text="" HorizontalAlignment="Left" Margin="179,240,0,0" VerticalAlignment="Top" Width="120" ItemsSource="{Binding Source={StaticResource enmPositions}}"/>
 
     </Grid>
 </Window>
