--- a/EasyConsole/ModifySave.xaml
+++ b/EasyConsole/ModifySave.xaml
@@ -10,23 +10,25 @@
         Title="ModifySave" Height="335.901" Width="493.957">
     <Window.Resources>
         <ObjectDataProvider x:Key="enmPositions" MethodName="GetValues" ObjectType="{x:Type System:Enum}">
-        <ObjectDataProvider.MethodParameters>
+            <ObjectDataProvider.MethodParameters>
                 <x:Type TypeName="local:BackupType"></x:Type>
-        </ObjectDataProvider.MethodParameters>
+            </ObjectDataProvider.MethodParameters>
         </ObjectDataProvider>
     </Window.Resources>
-    
+
     <Grid>
         <TextBlock HorizontalAlignment="Left" Margin="0,10,0,0" TextWrapping="Wrap" Text="Modify your element" VerticalAlignment="Top" Width="487" FontSize="24" FontWeight="Bold" TextAlignment="Center"/>
         <TextBlock HorizontalAlignment="Left" Margin="192,56,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="21" FontSize="18"><Run Text="BackUpName"/><LineBreak/><Run/></TextBlock>
         <TextBlock HorizontalAlignment="Left" Margin="194,206,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="27" Text="BackupType" Width="112" FontSize="18"/>
-        <TextBlock HorizontalAlignment="Center" Margin="214,107,218.2,0" TextWrapping="Wrap" VerticalAlignment="Top" Text="Source" FontSize="18"/>
+        <TextBlock HorizontalAlignment="Center" Margin="218,107,206,0" TextWrapping="Wrap" VerticalAlignment="Top" Text="Source" FontSize="18" Width="62"/>
         <TextBlock HorizontalAlignment="Center" Margin="222,156,207.2,0" TextWrapping="Wrap" VerticalAlignment="Top" Text="Target" FontSize="18" Width="58"/>
         <TextBox x:Name="BackupName" HorizontalAlignment="Left" Height="23" Margin="14,81,0,0" TextWrapping="Wrap" Text="{Binding BackupName}" VerticalAlignment="Top" Width="453"/>
-        <TextBox x:Name="Source" HorizontalAlignment="Left" Height="23" Margin="14,130,0,0" TextWrapping="Wrap" Text="{Binding Source}" VerticalAlignment="Top" Width="453"/>
-        <TextBox x:Name="Target" HorizontalAlignment="Left" Height="23" Margin="14,179,0,0" TextWrapping="Wrap" Text="{Binding Target}" VerticalAlignment="Top" Width="453" RenderTransformOrigin="0.559,1.388"/>
+        <TextBox x:Name="Source" HorizontalAlignment="Left" Height="23" Margin="14,130,0,0" TextWrapping="Wrap" Text="{Binding Source}" VerticalAlignment="Top" Width="400"/>
+        <TextBox x:Name="Target" HorizontalAlignment="Left" Height="23" Margin="14,179,0,0" TextWrapping="Wrap" Text="{Binding Target}" VerticalAlignment="Top" Width="400" RenderTransformOrigin="0.559,1.388"/>
         <Button Content="Modify" HorizontalAlignment="Left" Margin="205,272,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
         <ComboBox x:Name="MenuSaveType" Text="" HorizontalAlignment="Left" Margin="179,240,0,0" VerticalAlignment="Top" Width="120" ItemsSource="{Binding Source={StaticResource enmPositions}}"/>
+        <Button Content="..." HorizontalAlignment="Left" Margin="419,130,0,0" VerticalAlignment="Top" Width="57" RenderTransformOrigin="0.324,0.717" Height="23" Click="Button_Click_Browse_Source"/>
+        <Button Content="..." HorizontalAlignment="Left" Margin="419,179,0,0" VerticalAlignment="Top" Width="57" RenderTransformOrigin="0.324,0.717" Height="23" Click="Button_Click_Browse_Target"/>
 
     </Grid>
 </Window>
