--- a/EasyConsole/TitleScreen.xaml
+++ b/EasyConsole/TitleScreen.xaml
@@ -7,8 +7,8 @@
         xmlns:p="clr-namespace:EasyConsole.Properties"
         mc:Ignorable="d"
         Title="EASYSAVE" Height="571.721" Width="800" Background="White" Foreground="White">
-    <StackPanel x:Name="border" HorizontalAlignment="Center" VerticalAlignment="Center" Height="449" Background="Black" Width="736" Margin="28,78,28,14">
-        <Label x:Name="welcome" Content="{x:Static p:Resources.WelcomeMessage}" Background="{x:Null}" Foreground="White" RenderTransformOrigin="0.513,0.496" HorizontalAlignment="Center" FontFamily="Arial" FontSize="22" FontWeight="Bold" />
+    <StackPanel x:Name="border" HorizontalAlignment="Center" VerticalAlignment="Center" Height="509" Background="#FF494646" Width="736" Margin="29,19,29,15">
+        <Label x:Name="welcome" Content="bienvenue" Background="{x:Null}" Foreground="White" RenderTransformOrigin="0.513,0.496" HorizontalAlignment="Center" FontFamily="Arial" FontSize="22" FontWeight="Bold" />
         <Label x:Name="nothing" Content=" " Background="{x:Null}" Foreground="White" RenderTransformOrigin="0.513,0.496" HorizontalAlignment="Center" FontFamily="Arial" FontSize="36" FontWeight="Bold" Height="6">
             <Label.RenderTransform>
                 <TransformGroup>
@@ -21,18 +21,18 @@
         </Label>
         <Image Source="Ressources\easysave.png" Height="189" Width="400" />
         <StackPanel x:Name="chooseLanguage" Margin="10" Height="88">
-            <Label x:Name="language" Content="{x:Static p:Resources.LanguageOption}" Foreground="White" FontFamily="Arial" FontSize="14" />
+            <Label x:Name="language" Content="language" Foreground="White" FontFamily="Arial" FontSize="14" />
             <WrapPanel Width="639">
-                <Button x:Name="english" Width="150" BorderBrush="Black" ClickMode="Press" Click="english_Click" Background="Black" Foreground="Black">
+                <Button x:Name="english" Width="150" BorderBrush="#FF494646" ClickMode="Press" Click="english_Click" Background="#FF494646" Foreground="Black">
                     <Image x:Name="IMGenglish" Source="Ressources\english.png" Height="50" Width="50" Opacity="0.78" />
                 </Button>
-                <Button x:Name="spainish" Width="150" Background="Black" BorderBrush="Black" Click="spainish_Click">
+                <Button x:Name="spainish" Width="150" Background="#FF494646" BorderBrush="#FF494646" Click="spainish_Click">
                     <Image x:Name="IMGspanish" Source="Ressources\spainish.png" Height="50" Width="50" />
                 </Button>
-                <Button x:Name="french" Width="150" Background="Black" BorderBrush="Black" Click="french_Click">
+                <Button x:Name="french" Width="150" Background="#FF494646" BorderBrush="#FF494646" Click="french_Click">
                     <Image x:Name="IMGfrench" Source="Ressources\french.png" Height="50" Width="50" />
                 </Button>
-                <Button x:Name="german" Width="150" Background="Black" BorderBrush="Black" Click="german_Click">
+                <Button x:Name="german" Width="150" Background="#FF494646" BorderBrush="#FF494646" Click="german_Click">
                     <Image x:Name="IMGgerman" Source="Ressources\german.png" Height="50" Width="50" />
                 </Button>
             </WrapPanel>
