--- a/EasyConsole/TitleScreen.xaml
+++ b/EasyConsole/TitleScreen.xaml
@@ -6,9 +6,9 @@
         xmlns:local="clr-namespace:EasyConsole"
         xmlns:p="clr-namespace:EasyConsole.Properties"
         mc:Ignorable="d"
-        Title="EASYSAVE" Height="571.721" Width="800" Background="White" Foreground="White">
-    <StackPanel x:Name="border" HorizontalAlignment="Center" VerticalAlignment="Center" Height="545" Background="#FF494646" Width="790" Margin="0,0,4,-2">
-        <Label x:Name="welcome" Content="bienvenue" Background="{x:Null}" Foreground="White" RenderTransformOrigin="0.513,0.496" HorizontalAlignment="Center" FontFamily="Arial" FontSize="22" FontWeight="Bold" />
+        Title="EASYSAVE" Height="585.721" Width="800" Background="White" Foreground="White">
+    <StackPanel x:Name="border" HorizontalAlignment="Left" Background="#FF494646" Width="794" Margin="0,0,0,1">
+        <Label x:Name="welcome" Content="{x:Static p:Resources.WelcomeMessage}" Background="{x:Null}" Foreground="White" RenderTransformOrigin="0.513,0.496" HorizontalAlignment="Center" FontFamily="Arial" FontSize="22" FontWeight="Bold" />
         <Label x:Name="nothing" Content=" " Background="{x:Null}" Foreground="White" RenderTransformOrigin="0.513,0.496" HorizontalAlignment="Center" FontFamily="Arial" FontSize="36" FontWeight="Bold" Height="6">
             <Label.RenderTransform>
                 <TransformGroup>
@@ -21,7 +21,7 @@
         </Label>
         <Image Source="Ressources\easysave.png" Height="189" Width="400" />
         <StackPanel x:Name="chooseLanguage" Margin="10" Height="88">
-            <Label x:Name="language" Content="language" Foreground="White" FontFamily="Arial" FontSize="14" />
+            <Label x:Name="language" Content="{x:Static p:Resources.LanguageOption}" Foreground="White" FontFamily="Arial" FontSize="14" />
             <WrapPanel Width="639">
                 <Button x:Name="english" Width="150" BorderBrush="#FF494646" ClickMode="Press" Click="english_Click" Background="#FF494646" Foreground="Black">
                     <Image x:Name="IMGenglish" Source="Ressources\english.png" Height="50" Width="50" Opacity="0.78" />
@@ -39,12 +39,12 @@
         </StackPanel>
         <StackPanel Height="159">
             <Label  Content="Enter your file Extension :" Background="{x:Null}" Foreground="White" RenderTransformOrigin="0.513,0.496" HorizontalAlignment="Left" FontFamily="Arial" FontSize="16" FontWeight="Bold" />
-            <TextBox x:Name="FileExtension" Height="24" TextWrapping="Wrap" Text="FileExtension" RenderTransformOrigin="0.537,-0.882" Margin="250,0" Background="#FF888888" Foreground="White" BorderBrush="#FF494646" HorizontalAlignment="Center" VerticalAlignment="Center" Width="299" FontFamily="Arial" TextAlignment="Center"/>
+            <TextBox x:Name="FileExtension" Height="24" TextWrapping="Wrap" Text="" RenderTransformOrigin="0.537,-0.882" Margin="250,0" Background="#FF888888" Foreground="White" BorderBrush="#FF494646" HorizontalAlignment="Center" VerticalAlignment="Center" Width="299" FontFamily="Arial" TextAlignment="Center"/>
             <Label Content="Enter your Business soft :" Background="{x:Null}" Foreground="White" RenderTransformOrigin="0.513,0.496" HorizontalAlignment="Left" FontFamily="Arial" FontSize="16" FontWeight="Bold" />
-            <TextBox x:Name="business_software" Height="24" TextWrapping="Wrap" Text="Business_soft" RenderTransformOrigin="0.537,-0.882" Margin="250,0" Background="#FF888888" Foreground="White" BorderBrush="#FF494646" HorizontalAlignment="Center" VerticalAlignment="Center" Width="299" FontFamily="Arial" TextAlignment="Center"/>
+            <TextBox x:Name="business_software" Height="24" TextWrapping="Wrap" Text="" RenderTransformOrigin="0.537,-0.882" Margin="250,0" Background="#FF888888" Foreground="White" BorderBrush="#FF494646" HorizontalAlignment="Center" VerticalAlignment="Center" Width="299" FontFamily="Arial" TextAlignment="Center"/>
             <Label Content="Enter your CryptoSoft Link :" Background="{x:Null}" Foreground="White" RenderTransformOrigin="0.513,0.496" HorizontalAlignment="Left" FontFamily="Arial" FontSize="16" FontWeight="Bold" />
-            <TextBox x:Name="CryptoSoft" Height="24" TextWrapping="Wrap" Text="Business_soft" RenderTransformOrigin="0.537,-0.882" Margin="250,0" Background="#FF888888" Foreground="White" BorderBrush="#FF494646" HorizontalAlignment="Center" VerticalAlignment="Center" Width="299" FontFamily="Arial" TextAlignment="Center"/>
+            <TextBox x:Name="CryptoSoft" Height="24" TextWrapping="Wrap" Text="" RenderTransformOrigin="0.537,-0.882" Margin="250,0" Background="#FF888888" Foreground="White" BorderBrush="#FF494646" HorizontalAlignment="Center" VerticalAlignment="Center" Width="299" FontFamily="Arial" TextAlignment="Center"/>
         </StackPanel>
-        <Button x:Name="start" Background="#FF494646" Margin="330,0,0,0" Click="Button_Click" Visibility="Visible" Content="START" Height="50" BorderBrush="White" Foreground="White" FontFamily="Arial" FontSize="16" FontWeight="Bold" HorizontalAlignment="Left" Width="196" RenderTransformOrigin="0.007,0.948"/>
+        <Button x:Name="start" Background="#FF494646" Margin="296,0,298,0" Click="Button_Click" Visibility="Visible" Content="START" Height="50" BorderBrush="White" Foreground="White" FontFamily="Arial" FontSize="16" FontWeight="Bold" RenderTransformOrigin="0.007,0.948"/>
     </StackPanel>
 </Window>
